# vnv

./: .clang-format  .clang-tidy  .cproject  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .project  .vnv-config.json  CMakeLists.txt  LICENSE  Makefile  NOTES.md  README  README.md  buildvnv  docker.sh
docs/: CMakeLists.txt  about.rst  conf.py.in  index.rst  requirements.txt
docs/reports/phaseIIProposal/: Makefile  Narrative.tex
docs/reports/phaseIReport/: FinalReport.tex  FinalReport.toc  header.tex  packages.tex
docs/usage/: injectionpoints.rst  installation.rst  quickstart.rst
examples/: CMakeLists.txt  reports.json
examples/c/: CMakeLists.txt  sample.c  sample.json
examples/cpp/: CMakeLists.txt  contour.cpp  distributed.cpp  euler.cpp  finiteDifferenceDerivative.cpp  injectionPoint.cpp  iterator.cpp  line.cpp  live.cpp  vectors.cpp
examples/cpp/inputfiles/: contour.json  distributed.json  euler.json  finiteDifferenceDerivative.json  injectionPoint.json  iterator.json  line.json  live.json  vectors.json
examples/dummy/: CMakeLists.txt  Makefile
examples/dummy/c_executables/: CMakeLists.txt  sample.c  sample.json
examples/dummy/executables/: CMakeLists.txt  Makefile  app.cpp  distributed.cpp  distributed.json  live.cpp  noclang.cpp  read.cpp  sample-live.json  sample-read.json  sample-tests.xml  sample.cpp  sample.json  sample_with_papi.json  serial.cpp  simple.cpp  template.cpp  templates.cpp
examples/dummy/libraries/: CMakeLists.txt  Makefile
examples/dummy/tests/: CMakeLists.txt  Makefile
examples/example-tests/src/: Test_Under_Sample.cpp
examples/fortran/: CMakeLists.txt  hellovnv.cpp  helloworld.f90  reg.c  reg.f90  vnv.json  vnv_fortran.c  vnv_fortran_mod.f90
examples/issues/: CMakeLists.txt
examples/issues/src/: issues.cpp
examples/newton/: CMakeLists.txt  ged.cpp  main.cpp  newt.h  newton-input.json  nlnewt.cpp
examples/plugin/: CMakeLists.txt  CustomActions.cpp  CustomDataTypes.cpp  CustomIterator.cpp  CustomOptions.cpp  CustomPlug.cpp  CustomReduction.cpp  CustomSampler.cpp  CustomTest.cpp  CustomTransform.cpp  CustomUnitTests.cpp
examples/psip/: CMakeLists.txt
examples/psip/src/: psip.cpp
examples/read/: CMakeLists.txt  read.cpp
examples/sample-executable/: Makefile  sample-tests.xml  sample.cpp  sample.xml
examples/samples/: CMakeLists.txt  CustomActions.cpp  CustomDataTypes.cpp  CustomIterator.cpp  CustomOptions.cpp  CustomPlug.cpp  CustomReduction.cpp  CustomSampler.cpp  CustomTest.cpp  CustomTransform.cpp  CustomUnitTests.cpp  VnVMacros.cpp  input.json
examples/testLib_one/: Makefile  test1.cpp  test1.h  test1a.cpp
examples/testLib_two/: Makefile  test2.h
examples/tests/src/: EuclideanError.cpp
examples/usage/: CMakeLists.txt  app.cpp  noclang.cpp
externalPlugins/Dakota/: CMakeLists.txt
externalPlugins/Dakota/cmake/: DakotaVnVConfig.cmake.in
externalPlugins/Dakota/examples/: CMakeLists.txt  sample.cpp  sample.json
externalPlugins/Dakota/registration/: Registration_Dakota.cpp  Registration_DakotaExample.cpp
externalPlugins/Dakota/src/: CMakeLists.txt  dakota_parameter_search.cpp  dakota_vnv_interface.hpp
externalPlugins/papiTests/: CMakeLists.txt
externalPlugins/papiTests/cmake/: PapiTestConfig.cmake.in
externalPlugins/papiTests/registration/: Registration_Papi.cpp
externalPlugins/papiTests/src/: CMakeLists.txt  hardwareInfo.cpp
extraction/: CMakeLists.txt  FortranProcessor.cpp  Preprocessor.cpp  Printer.cpp  README.md  Writer.cpp  ccompile.py  vv-matcher.cpp
generation/: CMakeLists.txt  README.md  setup.py  vnv-quickstart.py
generation/example/: conf.py  index.rst
generation/vnv/: CMakeLists.txt  __init__.py
generation/vnv/directives/: VnVDirectives.py
generation/vnv/generate/: Generate.py  HtmlToPng.py  ImageCreator.py  RestUtils.py  configs.py  deploy.py
generation/vnv/vnv/: CMakeLists.txt  IOutputReader.i
injection/: .injection_points.cpp.swp  .injection_points.h.swp  CMakeLists.txt  Makefile
injection/clang/: CMakeLists.txt  vv-matcher.cpp
injection/cmake/: InjectionConfig.cmake.in
injection/include/: .injection.cpp.swp  .injection.h.swl  .injection.h.swm  .injection.h.swn  .injection.h.swo  .injection.h.swp  .injection.tpp.swm  .injection.tpp.swn  .injection.tpp.swo  .injection.tpp.swp  .vv_macros.h.swn  .vv_macros.h.swo  .vv_macros.h.swp  .vv_xml.h.swp  Registration.h  VnV-Interfaces.h  VnV.h  injection.h  injection.tpp  vnv-macros.h  vv-adios.h  vv-debug-engine.h  vv-injection.h  vv-output.h  vv-parser.h  vv-runtime.h  vv-testing.h  vv-utils.h  vv-xml-parser.h  vv_macros.h
injection/include/api/: VnV.h
injection/include/base/: ActionType.h  Comm.cpp  (+38 more)
injection/json/: example.json  vv_schema.json
injection/python/: CMakeLists.txt  IOutputReader.i  ModifiedFunctions.py  test.py  vv-input.json
injection/src/: .injection.cpp.swm  .injection.cpp.swn  .injection.cpp.swo  .injection.cpp.swp  CMakeLists.txt  Registration.cpp  injection.cpp  vv-adios.cpp  vv-debug-engine.cpp  vv-injection.cpp  vv-output.cpp  vv-parser.cpp  vv-registration.cpp  vv-runtime.cpp  vv-testing.cpp  vv-utils.cpp  vv-xml-parser.cpp
injection/util/: .library_generator.py.swp  .macro_generator.py.swo  .macro_generator.py.swp  .test_generator.py.swp  CMakeLists.txt  library_generator.py  macro_generator.py  subpackage.py  test_generator.py
injection/xml/: .gitignore  vv_schema.xsd
python-api/: CMakeLists.txt  IOutputReader.i  README.md  __init__.py  setup.py
report-generation/: CMakeLists.txt  README.md  generate.py  launch.sh  ln.sh  requirements.txt  run.py  vv-input.json
report-generation/app/: Directory.py  __init__.py
report-generation/python_api/: CMakeLists.txt  IOutputReader.i  __init__.py
report-generation/rendering/: __init__.py  readers.py
report-generation/sockets/: __init__.py
report-generation/template/: __init__.py
test/: CMakeLists.txt  gen.py  test-config.json  test-runner.cpp
test/unit-testers/: BFSTester.cpp  bitvector.cpp  parser.cpp  router.cpp
test/unit-tests/: BFSTester.cpp  CMakeLists.txt  bitvector.cpp  comm.cpp  parser.cpp  router.cpp
(+1087 files in other folders)
