add_subdirectory(python_api)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/app
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/run.py
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/requirements.txt
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})


find_package(VirtualEnv 15.0 REQUIRED)
find_package(Python3 3.5 REQUIRED)


add_custom_command(
    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/virt
    COMMAND ${VIRTUALENV_EXECUTABLE} -p ${Python3_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/virt
    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/virt/bin/pip3 install -r ${CMAKE_CURRENT_SOURCE_DIR}/requirements.txt
    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/requirements.txt
)

install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} DESTINATION gui USE_SOURCE_PERMISSIONS )
